some styling done

--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,11 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
@@ -22,6 +24,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -51,7 +54,12 @@
   color: #7C0B12;
   color: #52090E;
   color: #1B1811;
-  
+
+}
+
+.App {
+  width: 1020px;
+  background-color: antiquewhite;
 }
 
 #navbar {
@@ -60,16 +68,54 @@
   color: white;
 }
 
-#sidebar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 250px;
-  height: 100%;
+.sidebar {
+
+  background-color: #52090E;
+  color: #FAE59B;
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  gap: 15px;
+  /* Espacio entre enlaces */
+  box-shadow: 2px 0 5px #1B1811;
+  border: solid #1B1811 4px;
 }
 
-#footer{
+#footer {
   padding: 1rem;
   text-align: center;
   background-color: #f1f1f1;
+}
+
+#homepageList {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+}
+
+.listedItem {
+  background-color: #FAE59B;
+  color: #52090E;
+  border: solid #52090E 3px;
+  border-radius: 10px;
+  list-style: none;
+  margin-right: 30px;
+  display: flex;
+  flex-direction: row;
+
+}
+
+#cardTitle {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  /* change this so the price and the title are in differet corners of the div */
+}
+
+.itemIMG {
+  border-radius: 10px;
+  margin: 20px;
+  border: solid #52090E 3px;
 }
