--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,13 @@
   /* space between links */
   box-shadow: 2px 0 5px #1B1811;
   border: solid #1B1811 4px;
+
+}
+
+/* //Add this class to the links in sidebar */
+
+.sidebarLinks {
+  color: #f1f1f1;
 }
 
 #footer {
@@ -118,6 +125,7 @@
   border-radius: 10px;
   margin: 20px;
   border: solid #52090E 3px;
+  width: 170px;
 }
 
 .formDiv {
