--- a/src/App.css
+++ b/src/App.css
@@ -1,48 +1,12 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: 0;
+  padding: 0;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
 
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
 
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
 
 /* NEW STYLING FROM HERE ON */
 .colorPalette {
@@ -58,7 +22,7 @@
 }
 
 .App {
-  width: 1020px;
+  width: 1280px;
   background-color: antiquewhite;
 }
 
@@ -66,8 +30,13 @@
   padding: 1rem;
   background-color: #c39491;
   color: white;
+  height:10vh
 }
 
+#content{
+  min-height:70vh;
+}
+/* 
 .sidebar {
 
   background-color: #52090E;
@@ -77,11 +46,11 @@
   flex-direction: row;
   justify-content: space-around;
   gap: 15px;
-  /* space between links */
+
   box-shadow: 2px 0 5px #1B1811;
   border: solid #1B1811 4px;
 
-}
+} */
 
 
 .sidebar a {
@@ -92,6 +61,7 @@
   padding: 1rem;
   text-align: center;
   background-color: #f1f1f1;
+  height:10vh
 }
 
 #homepageList {
@@ -188,4 +158,42 @@ button {
   padding: 2px 5px;
   border-radius: 5px;
   box-shadow: 0 0 10px #c39491;
+}
+
+
+/* Sidebar */
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 300px; /* Hidden by default */
+  width: 300px; /* Sidebar width */
+  height:80%;
+  background-color: #6b1212;
+  color: white;
+  transition: left 0.3s ease-in-out; /* Smooth animation */
+  display: none;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 20px;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
+  z-index: 999; /* Ensure it's above content */
+}
+
+.sidebar.visible {
+  left: 0; /* Slide in */
+  display: flex
+}
+
+/* Hamburger Menu */
+.menu-button {
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  background-color: #fff;
+  border: 2px solid #ccc;
+  padding: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  z-index: 1000;
 }
