--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 #root {
   margin: 0;
+  width: 100%;
   padding: 0;
   text-align: center;
 }
@@ -17,7 +18,6 @@
 }
 
 .App {
-  width: 1280px;
   background-color: antiquewhite;
 }
 
@@ -45,7 +45,8 @@
   text-align: center;
   background-color: #c39491;
   box-shadow: 0 -10px 10px 0 #c39491;
-  height: 10vh;
+  margin-top: 20px;
+  padding: 2em;
 }
 
 #footer a {
@@ -102,15 +103,13 @@ li {
 .formDiv {
   display: flex;
   flex-direction: column;
-  align-items: flex-end; /* Align input fields and labels to the right */
-  gap: 20px;
+  align-items: center; /* Align input fields and labels to the right */
+  gap: 24px;
   color: #52090e;
   justify-content: flex-start; /* Keep it closer to the top */
   text-align: right; /* Align labels to the right */
-  max-width: 400px; /* Limit the form's width for better appearance */
+  max-width: 45%; /* Limit the form's width for better appearance */
   margin: 20px auto; /* Center horizontally with margin from the top */
-
-  border-radius: 10px; /* Rounded corners */
 }
 
 button.buttonStyling {
@@ -139,14 +138,15 @@ label {
 input {
   margin-left: 10px; /* Add space between label and input */
   padding: 5px;
-  width: 60%; /* Adjust the width of inputs */
+  width: 50%; /* Adjust the width of inputs */
   border: 1px solid #ccc;
   border-radius: 4px;
 }
-h2 {
+.h2Div {
   text-align: center; /* Center the header text */
   margin-bottom: 20px;
   color: #52090e;
+  width: 100%;
 }
 
 .detailsBTN a,
@@ -188,7 +188,7 @@ h2 {
   /* Hidden by default */
   width: 200px;
   /* Sidebar width */
-  height: 50%;
+  height: 30%;
   background-color: #6b1212;
   color: white;
   transition: left 0.3s ease-in-out;
@@ -232,6 +232,7 @@ h2 {
   flex-direction: row;
   justify-content: center;
   gap: 30px;
+  width: 90vw;
 }
 
 .titleAndPic img {
